@@ -35,6 +35,7 @@ import ai.metaheuristic.ai.launchpad.repositories.WorkbookRepository;
 import ai.metaheuristic.ai.launchpad.workbook.WorkbookService;
 import ai.metaheuristic.ai.resource.ResourceUtils;
 import ai.metaheuristic.ai.utils.ControllerUtils;
+import ai.metaheuristic.ai.utils.RestUtils;
 import ai.metaheuristic.ai.yaml.plan.PlanParamsYamlUtils;
 import ai.metaheuristic.api.EnumsApi;
 import ai.metaheuristic.api.data.OperationStatusRest;
@@ -50,25 +51,36 @@ import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.context.annotation.Profile;
+import org.springframework.core.io.AbstractResource;
+import org.springframework.core.io.FileSystemResource;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
+import org.springframework.http.HttpEntity;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.MediaType;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 import org.yaml.snakeyaml.Yaml;
 import org.yaml.snakeyaml.error.YAMLException;
 
 import java.io.*;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Path;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.Function;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 /**
  * @author Serge
@@ -82,6 +94,7 @@ import java.util.stream.Collectors;
 public class BatchTopLevelService {
 
     private static final String ATTACHMENTS_POOL_CODE = "attachments";
+    private static final String RESULT_ZIP = "result.zip";
 
     private static final String CONFIG_FILE = "config.yaml";
     private static final String ALLOWED_CHARS_IN_ZIP_REGEXP = "^[/\\\\A-Za-z0-9._-]*$";
@@ -160,6 +173,9 @@ public class BatchTopLevelService {
         if (tempFilename == null) {
             return new OperationStatusRest(EnumsApi.OperationStatus.ERROR, "#995.040 name of uploaded file is null");
         }
+        if (tempFilename.isBlank()) {
+            return new OperationStatusRest(EnumsApi.OperationStatus.ERROR, "#995.042 name of uploaded file is null");
+        }
         final String originFilename = tempFilename.toLowerCase();
         PlanImpl plan = planCache.findById(planId);
         if (plan == null) {
@@ -179,8 +195,8 @@ public class BatchTopLevelService {
             if (tempDir==null || tempDir.isFile()) {
                 return new OperationStatusRest(EnumsApi.OperationStatus.ERROR, "#995.070 can't create temporary directory in " + System.getProperty("java.io.tmpdir"));
             }
-
-            final File dataFile = new File(tempDir, originFilename );
+            String ext = StrUtils.getExtension(originFilename);
+            final File dataFile = File.createTempFile("uploaded-file-", ext, tempDir);
             log.debug("Start storing an uploaded file to disk");
             try(OutputStream os = new FileOutputStream(dataFile)) {
                 IOUtils.copy(file.getInputStream(), os, 32000);
@@ -212,16 +228,18 @@ public class BatchTopLevelService {
                     }
                     else {
                         log.debug("Start loading file data to db");
-                        loadFilesFromDirAfterZip(batch, tempDir, Collections.emptyMap());
+                        loadFilesFromDirAfterZip(batch, tempDir, Map.of(dataFile.getName(), originFilename));
                     }
                 }
                 catch(UnzipArchiveException e) {
-                    log.error("Error", e);
-                    batchService.changeStateToError(batch.id, "#995.100 can't unzip an archive. Error: " + e.getMessage()+", class: " + e.getClass());
+                    final String es = "#995.100 can't unzip an archive. Error: " + e.getMessage() + ", class: " + e.getClass();
+                    log.error(es, e);
+                    batchService.changeStateToError(batch.id, es);
                 }
                 catch(Throwable th) {
-                    log.error("Error", th);
-                    batchService.changeStateToError(batch.id, "#995.110 General processing error. Error: " + th.getMessage()+", class: " + th.getClass());
+                    final String es = "#995.110 General processing error. Error: " + th.getMessage() + ", class: " + th.getClass();
+                    log.error(es, th);
+                    batchService.changeStateToError(batch.id, es);
                 }
 
             }).start();
@@ -260,46 +278,44 @@ public class BatchTopLevelService {
 
     private void loadFilesFromDirAfterZip(Batch batch, File srcDir, final Map<String, String> mapping) throws IOException {
 
-        List<Path> paths = Files.list(srcDir.toPath())
+        final AtomicBoolean isEmpty = new AtomicBoolean(true);
+        Files.list(srcDir.toPath())
                 .filter(o -> {
                     File f = o.toFile();
                     return !EXCLUDE_EXT.contains(StrUtils.getExtension(f.getName()));
                 })
-                .collect(Collectors.toList());
+                .forEach( dataFilePath ->  {
+                    isEmpty.set(false);
+                    File file = dataFilePath.toFile();
+                    try {
+                        if (file.isDirectory()) {
+                            final File mainDocFile = getMainDocumentFileFromConfig(file, mapping);
+                            final Stream<FileWithMapping> files = Files.list(dataFilePath)
+                                    .filter(o -> o.toFile().isFile())
+                                    .map(f -> {
+                                        final String currFileName = file.getName() + File.separatorChar + f.toFile().getName();
+                                        final String actualFileName = mapping.get(currFileName);
+                                        return new FileWithMapping(f.toFile(), actualFileName);
+                                    });
+                            createAndProcessTask(batch, files, mainDocFile);
+                        } else {
+                            String actualFileName = mapping.get(file.getName());
+                            createAndProcessTask(batch, Stream.of(new FileWithMapping(file, actualFileName)), file);
+                        }
+                    } catch (StoreNewFileWithRedirectException e) {
+                        throw e;
+                    } catch (Throwable th) {
+                        String es = "#995.130 An error while saving data to file, " + th.toString();
+                        log.error(es, th);
+                        throw new BatchResourceProcessingException(es);
+                    }
+                });
 
-        if (paths.isEmpty()) {
+
+        if (isEmpty.get()) {
             batchService.changeStateToFinished(batch.id);
-            return;
         }
 
-        for (Path dataFile : paths) {
-            File file = dataFile.toFile();
-            if (file.isDirectory()) {
-                try {
-                    final File mainDocFile = getMainDocumentFileFromConfig(file, mapping);
-                    final List<FileWithMapping> files = new ArrayList<>();
-                    Files.list(dataFile)
-                            .filter(o -> o.toFile().isFile())
-                            .forEach(f -> {
-                                final String currFileName = file.getName() + File.separatorChar + f.toFile().getName();
-                                final String actualFileName = mapping.get(currFileName);
-                                files.add(new FileWithMapping(f.toFile(), actualFileName));
-                            });
-
-                    createAndProcessTask(batch, files, mainDocFile);
-                } catch (StoreNewFileWithRedirectException e) {
-                    throw e;
-                } catch (Throwable th) {
-                    String es = "#995.130 An error while saving data to file, " + th.toString();
-                    log.error(es, th);
-                    throw new BatchResourceProcessingException(es);
-                }
-            } else {
-                String actualFileName = mapping.get(file.getName());
-                final List<FileWithMapping> files = Collections.singletonList(new FileWithMapping(file, actualFileName));
-                createAndProcessTask(batch, files, file);
-            }
-        }
     }
 
     private File getMainDocumentFileFromConfig(File srcDir, Map<String, String> mapping) throws IOException {
@@ -349,15 +365,38 @@ public class BatchTopLevelService {
         return yaml;
     }
 
-    private void createAndProcessTask(Batch batch, List<FileWithMapping> dataFile, File mainDocFile) {
+    private void createAndProcessTask(Batch batch, Stream<FileWithMapping> dataFiles, File mainDocFile) {
 
         Long planId = batch.planId;
         long nanoTime = System.nanoTime();
         List<String> attachments = new ArrayList<>();
         String mainPoolCode = String.format("%d-%s-%d", planId, Consts.MAIN_DOCUMENT_POOL_CODE_FOR_BATCH, nanoTime);
         String attachPoolCode = String.format("%d-%s-%d", planId, ATTACHMENTS_POOL_CODE, nanoTime);
-        boolean isMainDocPresent = false;
-        for (FileWithMapping fileWithMapping : dataFile) {
+        final AtomicBoolean isMainDocPresent = new AtomicBoolean(false);
+        dataFiles.forEach( fileWithMapping -> {
+            String originFilename = fileWithMapping.originName!=null ? fileWithMapping.originName : fileWithMapping.file.getName();
+            if (EXCLUDE_EXT.contains(StrUtils.getExtension(originFilename))) {
+                return;
+            }
+            final String code = ResourceUtils.toResourceCode(fileWithMapping.file.getName());
+
+            String poolCode;
+            if (fileWithMapping.file.equals(mainDocFile)) {
+                poolCode = mainPoolCode;
+                isMainDocPresent.set(true);
+            }
+            else {
+                poolCode = attachPoolCode;
+                attachments.add(code);
+            }
+
+            resourceService.storeInitialResource(fileWithMapping.file, code, poolCode, originFilename);
+
+                }
+        );
+/*
+        // TODO this is original version without stream. if stream works, delete this block of code
+        for (FileWithMapping fileWithMapping : dataFiles) {
             String originFilename = fileWithMapping.originName!=null ? fileWithMapping.originName : fileWithMapping.file.getName();
             if (EXCLUDE_EXT.contains(StrUtils.getExtension(originFilename))) {
                 continue;
@@ -376,8 +415,9 @@ public class BatchTopLevelService {
 
             resourceService.storeInitialResource(fileWithMapping.file, code, poolCode, originFilename);
         }
+*/
 
-        if (!isMainDocPresent) {
+        if (!isMainDocPresent.get()) {
             throw new BatchResourceProcessingException("#995.180 main document wasn't found");
         }
 
@@ -398,14 +438,15 @@ public class BatchTopLevelService {
 
         PlanApiData.TaskProducingResultComplex countTasks = planService.produceTasks(false, plan, producingResult.workbook.getId());
         if (countTasks.planProducingStatus != EnumsApi.PlanProducingStatus.OK) {
+            workbookService.changeValidStatus(bw.workbookId, false);
             throw new BatchResourceProcessingException("#995.220 validation of plan was failed, status: " + countTasks.planValidateStatus);
         }
 
-        if (globals.maxTasksPerPlan < countTasks.numberOfTasks) {
+        if (globals.maxTasksPerWorkbook < countTasks.numberOfTasks) {
             workbookService.changeValidStatus(producingResult.workbook.getId(), false);
             throw new BatchResourceProcessingException(
                     "#995.220 number of tasks for this workbook exceeded the allowed maximum number. Workbook was created but its status is 'not valid'. " +
-                            "Allowed maximum number of tasks: " + globals.maxTasksPerPlan+", tasks in this workbook:  " + countTasks.numberOfTasks);
+                            "Allowed maximum number of tasks: " + globals.maxTasksPerWorkbook +", tasks in this workbook:  " + countTasks.numberOfTasks);
         }
         workbookService.changeValidStatus(producingResult.workbook.getId(), true);
 
@@ -435,6 +476,24 @@ public class BatchTopLevelService {
         }
         BatchStatus status = batchService.updateStatus(batchId, false);
         return new BatchData.Status(batchId, status.getStatus(), status.ok);
+    }
+
+    public HttpEntity<AbstractResource> getBatchProcessingResult(Long batchId) throws IOException {
+        File resultDir = DirUtils.createTempDir("prepare-file-processing-result-");
+        File zipDir = new File(resultDir, "zip");
+        zipDir.mkdir();
+        BatchStatus status = batchService.prepareStatusAndData(batchId, zipDir, false, true);
+
+        File statusFile = new File(zipDir, "status.txt");
+        FileUtils.write(statusFile, status.getStatus(), StandardCharsets.UTF_8);
+        File zipFile = new File(resultDir, RESULT_ZIP);
+        ZipUtils.createZip(zipDir, zipFile, status.renameTo);
+
+
+        HttpHeaders httpHeaders = new HttpHeaders();
+        httpHeaders.setContentType(MediaType.APPLICATION_OCTET_STREAM);
+        httpHeaders.setContentDispositionFormData("attachment", RESULT_ZIP);
+        return new HttpEntity<>(new FileSystemResource(zipFile), RestUtils.getHeader(httpHeaders, zipFile.length()));
     }
 
 
